--- a/src/webapp/WEB-INF/pages/new.html
+++ b/src/webapp/WEB-INF/pages/new.html
@@ -7,6 +7,10 @@
 <body>
 
 <form th:method="post" th:action="@{/users}" th:object="${user}">
+    <label for="login">Введите логин</label>
+    <input type="text" th:field="*{login}" id="login"/><br/>
+    <label for="password">Введите пароль</label>
+    <input type="text" th:field="*{password}" id="password"/><br/>
     <label for="firstName">Введите имя</label>
     <input type="text" th:field="*{firstName}" id="firstName"/><br/>
     <label for="lastName">Введите фамилию</label>
@@ -15,8 +19,12 @@
     <input type="text" th:field="*{email}" id="email"/><br/>
     <label for="age">Введите возраст</label>
     <input type="text" th:field="*{age}" id="age"/><br/>
-    <br/>
     <input type="submit" value="Добавить пользователя"/>
 </form>
+
+<form th:action="@{/logout}" method="post">
+    <input type="submit" value="Выйти"/>
+</form>
+
 </body>
 </html>
