--- a/src/webapp/WEB-INF/pages/users.html
+++ b/src/webapp/WEB-INF/pages/users.html
@@ -9,15 +9,24 @@
     <caption>Пользователи</caption>
     <tr>
         <th>Id</th>
+        <th>Логин</th>
+        <th>Пароль</th>
         <th>Имя</th>
         <th>Фамилия</th>
         <th>Е-мэйл</th>
         <th>Возраст</th>
+        <th>Права</th>
         <th>Действия</th>
     </tr>
     <tr th:each="user : ${usersList}">
         <td>
             <a th:href="@{/users/{id}(id=${user.getId()})}" th:text="${user.getId()}"></a>
+        </td>
+        <td>
+            <a th:href="@{/users/{id}(id=${user.getId()})}" th:text="${user.getLogin()}"></a>
+        </td>
+        <td>
+            <a th:href="@{/users/{id}(id=${user.getId()})}" th:text="${user.getPassword()}"></a>
         </td>
         <td>
             <a th:href="@{/users/{id}(id=${user.getId()})}" th:text="${user.getFirstName()}"></a>
@@ -31,6 +40,14 @@
         <td>
             <a th:href="@{/users/{id}(id=${user.getId()})}" th:text="${user.getAge()}"></a>
         </td>
+<!--        <td>-->
+<!--            <a th:href="@{/users/{id}(id=${user.getId()})}" th:text="${user.getRoles().size()}"></a>-->
+<!--        </td>-->
+        <td>
+            <th:block th:each="role : ${user.getRoles()}">
+                <a th:href="@{/users/{id}(id=${user.getId()})}" th:text="${role.getTitle()}"></a><div> </div>
+            </th:block>
+        </td>
         <td>
             <a th:href="@{/users/{id}/edit(id=${user.getId()})}">Редактировать пользователя</a>
             <form th:method="DELETE" th:action="@{/users/{id}(id=${user.getId()})}">
@@ -42,6 +59,10 @@
 <br/>
 
 <a href="/users/new">Создать нового пользователя</a>
+
+<form th:action="@{/logout}" method="post">
+    <input type="submit" value="Выйти"/>
+</form>
 
 </body>
 </html>
